@@ -1,3 +1,11 @@
+2007-04-13  Fabian Greffrath  <fabian.greffrath@web.de>
+
+	* util/grub.d/30_os-prober.in: New script. Use `os-prober' and
+	`linux-boot-prober' (if installed) to detect other operating
+	systems which are installed on the computer and add them to
+	the boot menu.
+	* conf/common.rmk: Build and install 30_os-prober.
+
 2008-04-12  Robert Millan  <rmh@aybabtu.com>
 
 	* kern/powerpc/ieee1275/init.c: Move from here ...
